# PerfCheck

./: .gitignore  CMakeLists.txt  README.md  workspace.code-workspace
TAPLib/: CMakeLists.txt  TAPLib.cpp
TAPLib/src/: CMakeLists.txt  Logger.cpp  Logger.h  TAPLib.h  Timer.cpp  Timer.h
src/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  ChartView.cpp  ChartView.h  DataModel.cpp  DataModel.h  FileManager.cpp  FileManager.h  FileManager.ui  Frame.h  FrameDataModel.cpp  FrameDataModel.h  InputFileTypes.cpp  InputFileTypes.h  Parsers.cpp  Parsers.h  PerfCheck.cpp  PerfCheck.h  PerfCheck.qrc  PerfCheck.ui  PerfCheckVersion.h  PerfCheckVersion.h.in  RandomData.cpp  RandomData.h  Series.h  Test.cpp  main.cpp
